--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8096,7 +8096,7 @@ body {
   border-bottom: 1px solid #b9b8b8;
   color: #565656;
   height: auto;
-  margin-top: 125px; }
+  margin-top: 118px; }
 
 .patientCalendar_watch {
   padding: 10px;
@@ -8110,7 +8110,7 @@ body {
   font-weight: bold; }
 
 .patientCalendar_Content {
-  margin: 129px 0 0 0; }
+  margin: 122px 0 0 0; }
   .patientCalendar_Content .list .item {
     padding: 10px; }
 
@@ -8310,7 +8310,7 @@ a {
 .bar-TitleLess {
   display: block;
   background-color: #f2f2f2;
-  /*height: 63px;*/
+  height: 63px;
   top: 120px; }
 
 .TitleLess {
